Added schedule data
